# snake_game

./: CMakeLists.txt  main.cpp
include/: State.hpp  StateMan.hpp  assetMan.hpp  game.hpp  mainMenu.hpp
src/: StateMan.cpp  assetMan.cpp  game.cpp  main.cpp  mainMenu.cpp
